ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zuul-web
  namespace: zuul
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "zuul-static-ip"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: gerrit-zuul.inaugust.com
    http:
      paths:
      - backend:
          serviceName: zuul-web
          servicePort: 9000
        path: /*
  tls:
    - secretName: zuul-web-certs
      hosts:
        - gerrit-zuul.inaugust.com
